--- a/src/main/webapp/WEB-INF/conf/RootConfig_a_project.properties
+++ b/src/main/webapp/WEB-INF/conf/RootConfig_a_project.properties
@@ -1,8 +1,3 @@
-LOG_HOME=c:/logs/
+LOG_HOME=${BASE_HOME}//logs/
 root_outputlevel=debug
 TEMP_TPG_PATH=${BASE_HOME}/temp
-
-#session_time_out=72000000
-#glassuser.root=
-glassuser.5A105E8B9D40E1329780D62EA2265D8A=1463328000
-glassuser.AD0234829205B9033196BA818F7A872B=1
